# hpc-core

./: Cargo.toml  README.md  clippy.toml  codecov.yml  justfile
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci-audit.yml  ci-auth.yml  ci-identity.yml  ci-node.yml  ci-raft.yml  ci-scheduler.yml  ci.yml
crates/audit/: Cargo.toml  README.md
crates/audit/src/: event.rs  lib.rs  policy.rs  sink.rs
crates/auth/: Cargo.toml  README.md
crates/auth/src/: auth_client.rs  cache.rs  discovery.rs  error.rs  flows.rs  types.rs
crates/identity/: Cargo.toml  README.md
crates/identity/src/: cascade.rs  config.rs  error.rs  identity.rs  lib.rs  provider.rs  rotator.rs
crates/node/: Cargo.toml  README.md
crates/node/src/: cgroup.rs  lib.rs  mount.rs  namespace.rs  readiness.rs
crates/raft/: Cargo.toml  README.md
crates/raft/src/: store.rs
crates/scheduler/: Cargo.toml  README.md
crates/scheduler/src/: conformance.rs  cost.rs  knapsack.rs  placement.rs  preemption.rs  resource_timeline.rs  topology.rs  walltime.rs
scripts/: set-version.sh  version-offsets.conf
src/: backup.rs  lib.rs  log_store_variant.rs  network.rs  persistent_store.rs  state_machine.rs  store.rs  transport.rs  transport_server.rs
