[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "2026.1.0"
license = "Apache-2.0"
repository = "https://github.com/witlox/hpc-core"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
