[package]
name = "hpc-audit"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Shared audit event types and sink trait for HPC systems. Loose coupling, high coherence — each system owns its log, shared format for SIEM forwarding."
repository.workspace = true
readme = "README.md"
keywords = ["hpc", "audit", "compliance", "siem", "logging"]
categories = ["os"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]

[lints]
workspace = true
