[package]
name = "hpc-identity"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Workload identity abstraction for HPC systems: SPIRE/self-signed/bootstrap certificate sources behind a trait, with cascading provider selection and dual-channel certificate rotation."
repository.workspace = true
readme = "README.md"
keywords = ["hpc", "identity", "spire", "mtls", "certificate"]
categories = ["authentication"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["full", "test-util"] }

[lints]
workspace = true
