[package]
name = "raft-hpc-core"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Shared Raft consensus infrastructure for HPC systems"
repository.workspace = true
rust-version = "1.85"
readme = "README.md"

[dependencies]
openraft = { version = "=0.10.0-alpha.17", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["tls-ring", "channel", "transport"] }
tonic-prost = "0.14"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
tar = "0.4"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[lints]
workspace = true
